# Knapsack-Encryption-With-Permutations

./: AttackMethod.h  CMakeCache.txt  CMakeLists.txt  README.md  basicpermutation.h  bf.rar  client.h  main.cpp  permutation.cpp  permutation.h  privatekeygenerator.cpp  privatekeygenerator.h  protocol.h  sims.h
attack/: attackmethod.h
perm/: CMakeLists.txt  basicpermutation.h  permutation.h  sims.h
protocol/: keypair.h  protocol.h
src/: main.cpp
util/: bitset_utils.h  permutation_vector_utils.h  privatekeygenerator.h
